usando shared preferences para primer welcome

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   percent_indicator: ^4.2.4
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
