--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   shared_preferences: ^2.3.3
   sqflite: ^2.0.2
+  animated_button: ^0.2.0
 
 dev_dependencies:
   flutter_test:
