--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.3.3
   sqflite: ^2.0.2
   animated_button: ^0.2.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
