--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sqflite: ^2.0.2
   animated_button: ^0.2.0
   url_launcher: ^6.3.0
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
