--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   animated_button: ^0.2.0
   url_launcher: ^6.3.0
   path: ^1.8.0
+  animated_text_kit: ^4.2.2
+  flutter_charts: ^0.5.2
 
 dev_dependencies:
   flutter_test:
