--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path: ^1.8.0
   animated_text_kit: ^4.2.2
   flutter_charts: ^0.5.2
+  flutter_highlight: ^0.7.0
 
 dev_dependencies:
   flutter_test:
