--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_charts: ^0.5.2
   flutter_highlight: ^0.7.0
+  sqflite_common: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +48,12 @@ flutter:
     - assets/icons/
 
   fonts:
-     - family: Inter
-       fonts:
-         - asset: assets/fonts/Inter_Bold.ttf
-         - asset: assets/fonts/Inter_ExtraLight.ttf
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter_Bold.ttf
+        - asset: assets/fonts/Inter_ExtraLight.ttf
+
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
