fixing score screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_charts: ^0.5.2
   flutter_highlight: ^0.7.0
   sqflite_common: ^2.5.4
+  easy_stepper: ^0.8.5
 
 dev_dependencies:
   flutter_test:
