solved: bug minSdkversion, bug admob

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ dependencies:
   sqflite_common: ^2.5.4
   easy_stepper: ^0.8.5
   confetti: ^0.7.0
-  
+  flutter_dotenv: ^5.2.1
   lottie: ^3.1.0
+  google_mobile_ads: ^4.0.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +43,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/logo.jpg"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  min_sdk_android: 21 
 
 flutter:
 
@@ -51,6 +53,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - .env
 
   fonts:
     - family: Inter
