--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package = "com.blogspot.rutaflutter">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="Ruta Flutter"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-4336409771912215~7839346002"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
