--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   lottie: ^3.1.0
   google_mobile_ads: ^4.0.0
-  
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
