--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: 'none'
 
-version: 1.0.1+1
+version: 1.0.3+3
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -53,6 +53,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - assets/icons/bold_linea_asset.png
     - .env
 
   fonts:
